fixing responsive ness for collapsable and cursor on image

--- a/src/index.css
+++ b/src/index.css
@@ -96,7 +96,7 @@ body {
     width: 100%;
   }
 }
-@media (max-width: 768px) {
+@media (min-width: 768px) {
   .accordion-head  {
     padding-left: 26px;
     padding-top: 5px;
